# sentinel-unchained

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  BUILD_PROVENANCE.md  DECISIONS.md  Dockerfile  HACKATHON_HANDOVER.md  JUDGE-QUICKSTART.md  MANIFEST.in  README.md  STATUS.md  compose.yaml  demo.ps1  get.ps1  get.sh  pyproject.toml  run.ps1  setup.ps1  setup.sh  verify.ps1
docs/: ARCHITECTURE.md  DEMO-SCRIPT.md  FINAL-SPRINT.md  HACKATHON_MASTER_PLAN.md  HONEST-WIN-ASSESSMENT.md  JUDGE-PANEL-REVIEW.md  OPENAI_VNEXT_RELEASE_HANDOFF.md  OPENAI_VNEXT_REVIEW.md  START-HERE.md  SUBMISSION.md  WINNER_ROADMAP.md
docs/runs/: sol-capped-dc01-opening.json
requirements/: README.md
scripts/: run_flagship.ps1  set-openai-key.ps1
src/unchained/: __init__.py  __main__.py  _tool_worker.py  agent.py  audit.py  caps.py  cli.py  evidence.py  model.py  models.py  onboarding.py  prompts.py  reporting.py  tools.py  verify.py  viewer.py  viewer_policy.py
submission/: BUSINESS-CASE.md  DEVPOST-DESCRIPTION-COMPACT.md  DEVPOST-FORM.md  JUDGE-ONE-PAGER.md  README.md  SUBMISSION-CHECKLIST.md  VIDEO-SCRIPT-FINAL.md
submission/slides/: slides.html
tests/: conftest.py  test_agent.py  test_audit.py  test_caps.py  test_cli.py  test_evidence.py  test_get_scripts.py  test_guided.py  test_model.py  test_onboarding.py  test_prompts.py  test_report_safety.py  test_reporting.py  test_setup_script.py  test_tools.py  test_verify.py  test_viewer.py  test_viewer_policy.py
