[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-unchained"
version = "0.1.0"
description = "A controlled, custody-preserving DFIR investigator driven by GPT-5.6."
readme = "README.md"
requires-python = ">=3.11,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Adil Eskintan" }]
dependencies = [
    "openai>=2.31,<3",
    "python-registry>=1.3,<2",
    "tiktoken>=0.9,<1",
    "volatility3>=2.8,<3",
    "sift-sentinel @ git+https://github.com/3sk1nt4n/Sentinel-Ensemble-Qwen.git@9f309c6134e857f7b86f3e6b9c6709ce954944a5",
]

[project.optional-dependencies]
dev = [
    "markdown-it-py==4.0.0",
    "pytest>=8,<10",
    "ruff>=0.15,<1",
]

[project.scripts]
sentinel-unchained = "unchained.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
