[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-unchained"
version = "0.1.0"
description = "A controlled, custody-preserving DFIR investigator driven by GPT-5.6."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Adil Eskintan" }]
dependencies = [
    "openai==2.31.0",
    "python-registry==1.3.1",
    "tiktoken==0.12.0",
    "volatility3==2.28.0",
    "sift-sentinel @ git+https://github.com/3sk1nt4n/Sentinel-Ensemble-Qwen.git@9f309c6134e857f7b86f3e6b9c6709ce954944a5",
]

[project.optional-dependencies]
dev = [
    "build==1.5.1",
    "markdown-it-py==4.0.0",
    "pytest==9.0.2",
    "ruff==0.15.6",
]

[project.scripts]
sentinel = "unchained.cli:main"
sentinel-unchained = "unchained.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
